made some style changes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <script defer src="script.js"></script>
     <title>Document</title>
 </head>
+
 <body>
     <div class="calculator">
         <div class="output">
@@ -28,9 +30,10 @@
         <button class="number">8</button>
         <button class="number">9</button>
         <button class="operation">*</button>
+        <button class="number zero">0</button>
         <button class="number">.</button>
-        <button class="number">0</button>
         <button class="span-2 equal">=</button>
     </div>
 </body>
+
 </html>
